# scoop-rs

./: Cargo.toml  README.md
interface/: Cargo.toml
interface/src/: bucket.rs  bucket_app.rs  dir.rs  error.rs  installed_app.rs  lib.rs  utils.rs  val.rs
interface/src/manifest/: mod.rs  schema.rs
interface/src/manifest/schema/: arch.rs  bin.rs  download_url.rs  persist.rs  test.rs
src/: main.rs  val.rs
src/cli/: mod.rs
src/cli/app/: install.rs  list.rs  mod.rs  search.rs  uninstall.rs  upgrade.rs
src/cli/app/install/: deps.rs  download.rs  env.rs  installer.rs  link.rs  persist.rs  resolve.rs  run_script.rs  shortcut.rs
src/cli/bucket/: list.rs  mod.rs  update.rs
src/interface/: app.rs  bucket.rs  bucket_app.rs  installed_app.rs  mod.rs
src/interface/manifest/: mod.rs  schema.rs
