workspace = { members = ["interface"] }
[package]
name = "scoop-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
dialoguer = "0.11.0"
dirs = "5.0.1"
git2 = "0.18.3"
indicatif = "0.17.8"
reqwest = { version = "0.12.3", features = ["stream"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tabled = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
interface = { path = "interface" }
futures-util = "0.3.30"
futures = "0.3.30"
sanitize-filename = "0.5.0"
chrono = "0.4.37"
